--- a/notes/第一章 预备知识.md
+++ b/notes/第一章 预备知识.md
@@ -27,7 +27,7 @@
 
 ### 1.3 程序创建的技巧
 
-<img src="https://pic.imgdb.cn/item/6510f3b4c458853aefee3140.jpg" style="zoom: 50%;" />
+![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/d832bd9b-38a5-4f73-856a-0894b682d74d)
 
 * 1.使用文本编辑器编写程序，并将其保存到文件中，这个文件就是程序的源代码。
 * 2.编译源代码。这意味着运行一个程序，将源代码翻译为主机使用的内部语言——机器语言。包含了翻译后的程序的文件就是程序的目标代码(object code)。
@@ -37,7 +37,8 @@
 
 ​	给源文件命名必须使用正确的后缀，将文件标识为C++文件：
 
-<img src="https://pic.imgdb.cn/item/6510ffebc458853aeff5af51.jpg" style="zoom:50%;" />
+![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/b1093afb-7d0f-4b3d-8a9e-57e993e42bef)
+
 
 #### 1.3.2 编译和链接
 
