--- a/notes/第一章 预备知识.md
+++ b/notes/第一章 预备知识.md
@@ -37,7 +37,7 @@
 
 ​	给源文件命名必须使用正确的后缀，将文件标识为C++文件：
 
-![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/b1093afb-7d0f-4b3d-8a9e-57e993e42bef)
+<img src="https://pic.imgdb.cn/item/6510ffebc458853aeff5af51.jpg" alt="blob">
 
 
 #### 1.3.2 编译和链接
