--- a/notes/第一章 预备知识.md
+++ b/notes/第一章 预备知识.md
@@ -37,7 +37,8 @@
 
 ​	给源文件命名必须使用正确的后缀，将文件标识为C++文件：
 
-<img src="https://pic.imgdb.cn/item/6510ffebc458853aeff5af51.jpg" alt="blob">
+![Uploading image.png…]()
+
 
 
 #### 1.3.2 编译和链接
