--- a/notes/第一章 预备知识.md
+++ b/notes/第一章 预备知识.md
@@ -37,9 +37,7 @@
 
 ​	给源文件命名必须使用正确的后缀，将文件标识为C++文件：
 
-![Uploading image.png…]()
-
-
+![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/b5477ae2-1e4e-4dd7-85f6-73bdb5edb437)
 
 #### 1.3.2 编译和链接
 
