--- a/notes/ch03 数据处理.md
+++ b/notes/ch03 数据处理.md
@@ -1,3 +1,19 @@
 ## 第三章 数据处理
 
 ### 3.1 简单变量
+
+##### 3.1.1 变量名
+
+* 命名规则：
+
+  * 在名称中只能使用字母字符、数字和下划线(_)；
+
+  * 名称的第一个字符不能是数字；
+
+  * 区分大写字符与小写字符；
+
+  * 不能将C++关键字用作名称；
+
+  * 以两个下划线或下划线和大写字母打头的名称被保留给实现（编译器及其使用的资源）使用。以一个下划线开头的名称被保留给实现，用作全局标识符；
+
+  * C++对于名称的长度没有限制，名称中所有的字符都有意义，但有些平台有长度限制。
