--- a/notes/ch03 数据处理.md
+++ b/notes/ch03 数据处理.md
@@ -17,3 +17,84 @@
   * 以两个下划线或下划线和大写字母打头的名称被保留给实现（编译器及其使用的资源）使用。以一个下划线开头的名称被保留给实现，用作全局标识符；
 
   * C++对于名称的长度没有限制，名称中所有的字符都有意义，但有些平台有长度限制。
+
+##### 3.1.2 整型
+
+* 没有小数部分的数字；
+
+* C++的基本整型（按宽度递增的顺序排列）：
+
+  * char、short、int、long、long long。
+
+  
+
+##### 3.1.3 整型short、int、long、long long
+
+* short是short int的简称，而long是long int的简称。
+
+  * sizeof运算符能够知道整数的最大长度，INT_MAX为int的最大取值，CHAR_BIT为字节的位数：
+
+    * ``` c++
+      // limits.cpp -- some integer limits
+      #include <iostream>
+      #include <climits>
+      
+      int main()
+      {
+      	using namespace std;
+      
+      	int n_int = INT_MAX;
+      	short n_short = SHRT_MAX;
+      	long n_long = LONG_MAX;
+      	long long n_llong = LLONG_MAX;
+      
+      	// sizeof operator yields size of type or of variable
+      	cout << "int is " << sizeof(int) << " bytes." << endl;
+      	cout << "short is " << sizeof n_short << " bytes." << endl;
+      	cout << "long is " << sizeof n_long << " bytes." << endl;
+      	cout << "long long is " << sizeof n_llong << " bytes." << endl;
+      	cout << endl;
+      
+      	cout << "Maximum values:" << endl;
+      	cout << "int: " << n_int << endl;
+      	cout << "short: " << n_short << endl;
+      	cout << "long: " << n_long << endl;
+      	cout << "long long: " << n_llong << endl << endl;
+      
+      	cout << "Minimum int values = " << INT_MIN << endl;
+      	cout << "Bits per byte = " << CHAR_BIT << endl;//字节的位数
+      	return 0;
+      }
+      ```
+
+    * 结果：
+
+    * ``` c++
+      int is 4 bytes.
+      short is 2 bytes.
+      long is 4 bytes.
+      long long is 8 bytes.
+      
+      Maximum values:
+      int: 2147483647
+      short: 32767
+      long: 2147483647
+      long long: 9223372036854775807
+      
+      Minimum int values = -2147483648
+      Bits per byte = 8			
+      ```
+
+  * sizeof运算符指出，在使用8位字节的系统中，int的长度为4个字节。
+
+  * 可对类型名或变量名使用sizeof运算符。
+
+* 1.运算符sizeof和头文件limits
+
+  * **对类型名(如int)使用sizeof运算符时，应将名称放在括号中;**
+
+  * **但对变量名(如n_short)使用该运算符，括号是可选的:**
+  * 头文件climits定义了符号常量来表示类型的限制。
+  * 符号常量——预处理器方式：
+    * #define INT_MAX 32767
+    * 预处理器编译指令：在程序中查找INT_MAX，并将所有的INT_MAX都替换为32767。
