--- a/notes/ch03 数据处理.md
+++ b/notes/ch03 数据处理.md
@@ -90,7 +90,6 @@
   * 可对类型名或变量名使用sizeof运算符。
 
 * 1.运算符sizeof和头文件limits
-
   * **对类型名(如int)使用sizeof运算符时，应将名称放在括号中;**
 
   * **但对变量名(如n_short)使用该运算符，括号是可选的:**
@@ -98,3 +97,60 @@
   * 符号常量——预处理器方式：
     * #define INT_MAX 32767
     * 预处理器编译指令：在程序中查找INT_MAX，并将所有的INT_MAX都替换为32767。
+* 2.初始化
+  * 初始化将赋值与声明合并在一起：
+    * int n_int = INT_MAX;
+
+##### 3.1.4 无符号类型
+
+* 例程：
+
+  * ``` c++
+    // exceed.cpp -- exceeding some integer limits
+    #include <iostream>
+    #define ZERO 0			// makes ZERO symbol for 0 value
+    #include <climits>		// defines INT_MAX as largest int value
+    
+    int main()
+    {
+    	using namespace std;
+    	
+    	short sam = SHRT_MAX;
+    	unsigned short sue = sam;
+    
+    	cout << "Sam has " << sam << " dollars and Sue has " << sue;
+    	cout << " dollars deposited." << endl
+    		<< "Add $1 to each account." << endl << "Now ";
+    	sam = sam + 1;
+    	sue = sue + 1;
+    	cout << "Sam has " << sam << " dollars and Sue has " << sue;
+    	cout << " dollars deposited.\nPoor Sam!" << endl;
+    
+    	sam = ZERO;
+    	sue = ZERO;
+    	cout << "Sam has " << sam << " dollars and Sue has " << sue;
+    	cout << " dollars deposited." << endl;
+    	cout << "Take $1 from each account." << endl << "Now ";
+    	sam = sam - 1;
+    	sue = sue - 1;
+    	cout << "Sam has " << sam << " dollars and Sue has " << sue;
+    	cout << " dollars deposited." << endl << "Lucky Sue!" << endl;
+    	return 0;
+    }
+    ```
+
+* 输出结果：
+
+  * ``` c++
+    Sam has 32767 dollars and Sue has 32767 dollars deposited.
+    Add $1 to each account.
+    Now Sam has -32768 dollars and Sue has 32768 dollars deposited.
+    Poor Sam!
+    Sam has 0 dollars and Sue has 0 dollars deposited.
+    Take $1 from each account.
+    Now Sam has -1 dollars and Sue has 65535 dollars deposited.
+    Lucky Sue!
+    ```
+
+* ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/bfdf43e2-ed1e-4ade-a39a-8a61cb233b5d)
+
