--- a/notes/ch03 数据处理.md
+++ b/notes/ch03 数据处理.md
@@ -154,3 +154,97 @@
 
 * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/bfdf43e2-ed1e-4ade-a39a-8a61cb233b5d)
 
+* 整型变量的行为就像里程表，如果超越了限制，其值将为范围另一端的取值。
+
+
+
+##### 3.1.5 选择整型类型
+
+* int：计算机处理起来效率最高的长度！
+* long：如果变量可能表示的值大于16位整数的最大可能值，则使用long；
+* short：仅当有大型整数型数组时，才有必要使用short。如果节省内存很重要，则应使用short而不是使用int。
+
+
+
+##### 3.1.6 整型字面值
+
+* 整型字面值（常量）是显式地书写的常量，如212或1234。
+
+* C++的三种不同的计数方式来书写整数（C++使用前一(两）位来标识数字常量的基数）：
+
+  * 如果第一位为1~9，则基数为10(十进制);因此93是以10为基数的。
+  * 如果第一位是0，第二位为1~7，则基数为8(八进制);因此042的基数是8，它相当于十进制数34。
+  * 如果前两位为Ox或0X，则基数为16(十六进制);因此0x42为十六进制数，相当于十进制数66。
+
+* `注意`：不管把值书写为哪种进制，在计算机中都以二进制的形式储存。
+
+* 例程：
+
+  * ``` c++
+    // hexoct1.cpp -- shows hex and octal literals
+    #include <iostream>
+    
+    int main()
+    {
+    	using namespace std;
+    
+    	int chest = 42;
+    	int waist = 0x42;
+    	int inseam = 042;
+    
+    	cout << "Monsieur cuts a striking figure!\n";
+    	cout << "chest = " << chest << " (42 in decimal)\n";
+    	cout << "waist = " << waist << " (0x42 in hex)\n";
+    	cout << "inseam = " << inseam << " (042 in octal)\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Monsieur cuts a striking figure!
+    chest = 42 (42 in decimal)
+    waist = 66 (0x42 in hex)
+    inseam = 34 (042 in octal)
+    ```
+
+* 如果要指定进制显示，需要使用cout的控制符：
+
+  * 例程：
+
+    * ``` c++
+      // hexoct2.cpp -- shows hex and octal literals
+      #include <iostream>
+      
+      int main()
+      {
+      	using namespace std;
+      
+      	int chest = 42;
+      	int waist = 42;
+      	int inseam = 42;
+      
+      	cout << "Monsieur cuts a striking figure!\n";
+      	cout << "chest = " << chest << " (decimal for 42)" << endl;
+      
+      	cout << hex;
+      	cout << "waist = " << waist << " (hexadecimal for 42)" << endl;
+      
+      	cout << oct;
+      	cout << "inseam = " << inseam << " (octal for 42)" << endl;
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ``` c++
+      Monsieur cuts a striking figure!
+      chest = 42 (decimal for 42)
+      waist = 2a (hexadecimal for 42)
+      inseam = 52 (octal for 42)
+      ```
+
+
+
