--- a/notes/ch03 数据处理.md
+++ b/notes/ch03 数据处理.md
@@ -237,7 +237,7 @@
       }
       ```
 
-  * 结果：
+ * * 结果：
 
     * ``` c++
       Monsieur cuts a striking figure!
@@ -245,6 +245,161 @@
       waist = 2a (hexadecimal for 42)
       inseam = 52 (octal for 42)
       ```
+
+
+
+##### 3.1.7 C++如何确定常量的类型
+
+* 除非有理由储存为其他类型，否则C++将整型常量储存为int类型；
+* 后缀（放在数字常量后面的字母，用于表示类型）：
+  * 整数后面的l或L：表示该整数为long常量；
+  * 整数后面的u或U：表示该整数为unsigned int常量；
+  * 整数后面的ul或UL：表示该整数为unsigned long常量；
+* 长度：
+  * 不带后缀的十进制整数，将使用下面几种类型中能够存储该数的最小类型来表示:
+    * int、long 或long long。
+  * 不带后缀的十六进制或者八进制整数，将使用下面几种类型中能够存储该数的最小类型来表示:
+    * int、unsigned int long、unsigned long、long long或unsigned long long。
+
+
+
+##### 3.1.8 char类型：字符和小整数
+
+* char类型：专门为储存字符（如字母和数字）而涉及的；
+
+* char类型是`另一种整型`，`它足够长`，能够表示目标计算机系统中的所有符号。
+
+* 符号集：ASCII字符集，学过了就不深究了
+
+* 1、例程：输入时cin将键盘输入的M转换为77，输出时cout将77转换为所显示的字符M。
+
+  * ``` c++
+    // chartype.cpp -- the char type
+    #include <iostream>
+    
+    int main()
+    {
+    	using namespace std;
+    	char ch;
+    
+    	cout << "Enter a character: \n";
+    	cin >> ch;
+    	cout << "Hola! ";
+    	cout << "Thak you for the " << ch << " character.\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Enter a character:
+    M
+    Hola! Thak you for the M character.
+    ```
+
+* 2、在C++中书写字符字面值，和cout.put()的用法：
+
+  * 例程：
+
+    * ``` c++
+      // morchar.cpp -- the char type and int type contrasted
+      #include <iostream>
+      
+      int main()
+      {
+      	using namespace std;
+      
+      	char ch = 'M';
+      	int i = ch;
+      	cout << "The ASCII code for " << ch << " is " << i << endl;
+      
+      	cout << "Add one to the character code:" << endl;
+      	ch = ch + 1;
+      	i = ch;
+      	cout << "The ASCII code for " << ch << " is " << i << endl;
+      
+      	// using the cout.put() member function to display a char
+      	cout << "Displaying char ch using cout.put(ch): ";
+      	cout.put(ch);
+      	cout.put('!');
+      	cout << endl << "Done" << endl;
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ``` c++
+      The ASCII code for M is 77
+      Add one to the character code:
+      The ASCII code for N is 78
+      Displaying char ch using cout.put(ch): N!
+      Done
+      ```
+
+  * cout.put()
+
+    * 类ostream有一个put()成员函数来输出字符，只能通过类的特定对象（cout）来使用成员函数。
+    * 要通过对象（cout）使用成员函数，必须用句点将对象名和函数名称连接在一起；
+    * 即：cout.put()的意思是：通过类对象cout来使用函数put()。
+
+  * char字面值：
+
+    * 书写字符常量：将字符用单引号扩起；
+
+    * 转义字符：
+
+      * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/dd46a796-9f1b-4886-aaa9-749e878ff94b)
+
+
+    * 例程：
+
+      * ``` c++
+        // bondini.cpp -- using escape sequences
+        #include <iostream>
+        
+        int main()
+        {
+        	using namespace std;
+        	cout << "\aOperation \"HyperHype\" is now activated!\n";
+        	cout << "Enter your agent code:_______\b\b\b\b\b\b\b";
+        	long code;
+        	cin >> code;
+        	cout << "\aYou entered " << code << "...\n";
+        	cout << "\aCode verified! Proceed with Plan Z3!\n";
+        	return 0;
+        }
+        ```
+
+    * 结果：
+
+      * ``` c++
+        Operation "HyperHype" is now activated!
+        Enter your agent code:1311993
+        You entered 1311993...
+        Code verified! Proceed with Plan Z3!
+        ```
+
+* 3、通用字符名
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
 
 
 
