--- a/notes/ch04 复合类型.md
+++ b/notes/ch04 复合类型.md
@@ -1,1 +1,444 @@
+## 第四章 复合类型
 
+### 4.1 数组
+
+* 数组是一种数据格式，能够储存多个同类型的值：
+
+  * 例如，数组可以储存60个int类型的值。
+  * 创建数组时，需要如下声明：
+    * 储存在每个元素中的值的类型；
+    * 数组名；
+    * 数组中的元素。
+  * 声明数组的通用格式：
+    * *typeName* arratName[arraySize];
+    * short months[12];
+    * 这里要`注意`：最后一个元素的索引比数组长度小1：
+      * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/28300dd4-694f-48a2-850b-57f1af0da040)
+
+
+* 例程：
+
+  * ``` c++
+    // arrayone.cpp -- small arrays of integers
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	int yams[3];
+    	yams[0] = 7;
+    	yams[1] = 8;
+    	yams[2] = 6;
+    
+    	int yamcosts[3] = {20, 30, 5 };
+    
+    	cout << "Total yams = ";
+    	cout << yams[0] + yams[1] + yams[2] << endl;
+    	cout << "The package with " << yams[1] << " yams costs ";
+    	cout << yamcosts[1] << " cents per yam.\n";
+    	
+    	int total = yams[0] * yamcosts[0] + yams[1] * yamcosts[1];
+    	total = total + yams[2] * yamcosts[2];
+    	cout << "The total yam expense is " << total << " cents.\n";
+    
+    	cout << "\nSize of yams array = " << sizeof yams;
+    	cout << " bytes.\n";
+    	cout << "Size of one element = " << sizeof yams[0];
+    	cout << " bytes.\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Total yams = 21
+    The package with 8 yams costs 30 cents per yam.
+    The total yam expense is 410 cents.
+    
+    Size of yams array = 12 bytes.
+    Size of one element = 4 bytes.
+    ```
+
+#### 4.1.1 程序说明
+
+* 申明数组时，可以给数组元素赋值：
+
+  * ``` c++
+    int yamcosts[3] = {20, 30, 5 };
+    ```
+
+* sizeof运算符返回类型或数据对象的长度（单位为字节）：
+
+  * 如果将 sizeof 用于数组名，得到的将是整个数组中的字节数。
+  * 但如果将 sizeof 用于数组元素，则得到的将是元素的长度(单位为字节)。
+
+#### 4.1.2 数组的初始化规则
+
+* 只有在定义数组时才能使用初始化，此后就不能使用了，也不能将一个数组赋给另一个数组：
+
+  * ``` c++
+    int cards[4] = {3, 6, 8, 10};  //okay
+    int hand[4];			      //okay
+    hand[4] = {5, 6, 7, 9};		  //not allowed
+    hand = cards;  				  //not allowed
+    ```
+
+* `但是`，可以使用下标分别给数组中的元素赋值。
+
+* 初始化数组时，提供的值可以少于数组的元素数目。
+
+* 如果只对数组的一部分进行初始化，则编译器将把其他元素设置为0。因此，将数组中所有的元素都初始化为0非常简单：
+
+  * 只要显式地将第一个元素初始化为0,然后让编译器将其他元素都初始化为0即可:
+
+  * ``` c++
+    long cards[400] = {0};  //okay
+    ```
+
+* 如果初始化为{1}而不是{0}，则第一个元素被设置为1，其他元素都被设置为0。
+
+* 如果初始化数组时方括号内([])为空，C++编译器将计算元素个数。例如，对于下面的声明:
+
+  * ``` c++
+    int cards[] = {3, 6, 8, 10};  //okay
+    ```
+
+
+
+#### 4.1.3 C++11数组初始化方法
+
+* C++11将使用大括号的初始化（列表初始化）作为一种通用初始化方式，可用于所有类型。
+
+* 新增功能：
+
+  * 1、初始化数组时，可省略等号（=）：
+
+    * ``` c++
+      double earnings[4] {1.2e4, 1.6e4, 1.1e4, 1.7e4};
+      ```
+
+  * 2、可不在大括号内包含任何东西，这将把所有元素都设置为`零`：
+
+    * ``` c++
+      unsigned int counts[10] = {};
+      float balances[100] {};
+      ```
+
+  * 3、列表初始化禁止缩窄转换,：
+
+    * ``` c++
+      long plifs[] = {25, 92, 3.0};  //将浮点数转换为整型是缩窄操作not allowed
+      char slifs[4] = {'h', 'i', 1122011, '\0'};  //1122011超出了char变量的取值范围not allowed
+      char tlifs[4] = {'h', 'i', 112, '\0'};  //因为虽然112是一个int值，但它在 char变量的取取值范围allowed
+      ```
+
+
+
+### 4.2 字符串
+
+* C-风格字符串（需要又空字符（\0）结尾）-冗长乏味：
+
+  * ```c++
+    char cat[8] = {'f', 'a', 't', 'e', 's', 's', 'a', '\0'};
+    ```
+
+* 字符串常量/字符串字面值（更好的将字符数组初始化为字符串的方法）：
+
+  * ``` c++
+    char bird[11] = "Mr. Cheeps";
+    char fish[] = "Bubbles";
+    ```
+
+  * 用引号括起的字符串隐式地包括结尾的空字符，因此不用显式地包括它。
+
+* `注意`：字符串常量（使用双引号）不能与字符常量（使用单引号）互换。
+
+  * 字符串常量（使用双引号）是字符串编码的简写表示：
+
+    * ``` c++
+      char shirt_size = 'S';//将83赋给shirt_size
+      ```
+
+  * "S"际上表示的是字符串所在的内存地址。因此下面的语句试图将一个内存地址赋给shirt_size:
+
+    * ``` c++
+      char shirt_size = "S";
+      ```
+
+
+
+#### 4.2.1 拼接字符串常量
+
+* C++允许凭借字符串字面值，即将两个用引号括起的字符串合并为一个：
+
+  * ``` c++
+    cout << "I'd gibe my right arm to be" " a great violinist.\n";
+    cout << "I'd gibe my right arm to be a great violinist.\n";
+    cout << "I'd gibe my right ar"
+        "m to be a great violinist.\n";
+    ```
+
+  * `注意`：拼接时不会在被连接的字符串之间添加空格，第二个字符串的第一个字符将紧跟在第一个字符串的最后一个字符（不考虑\0）后面。
+
+  * 第一个字符串中的\0字符将被第二个字符串的第一个字符取代。
+
+
+
+#### 4.2.2 在数组中使用字符串
+
+* 将字符串储存到数组中的常用两大方法：
+
+  * 1、将数组初始化为字符串常量。
+  * 2、将键盘或文件输入读入到数组中。
+
+* 例程：
+
+  * ``` c++
+    // strings.cpp -- storing strings in an array
+    #include <iostream>
+    #include <cstring>
+    
+    int main() {
+    	using namespace std;
+    	const int Size = 15;
+    	char name1[Size];
+    	char name2[Size] = "C++owboy";
+    
+    	cout << "Howdy! I'm " << name2;
+    	cout << "! What's your name?\n";
+    	cin >> name1;
+    	cout << "Well, " << name1 << ", your name has ";
+    	cout << strlen(name1) << " letters and is stored\n";
+    	cout << "Your initial is " << name1[0] << ".\n";
+    	name2[3] = '\0';
+    	cout << "Here are the first 3 characters of my name: ";
+    	cout << name2 << endl;
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Howdy! I'm C++owboy! What's your name?
+    Basicman
+    Well, Basicman, your name has 8 letters and is stored
+    Your initial is B.
+    Here are the first 3 characters of my name: C++
+    ```
+
+  * sizeof运算符能够指出整个数组的长度；
+
+  * 而strlen()函数能够返回储存在数组中的字符串长度（多少个可见字符，非空字符），而不是数组本身的长度（15字节）。
+
+  * 将name2[3]设置为空字符，使得输出字符串在第三个字符后即结束。
+
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/a0c71cfc-6909-4842-af1b-18abf9541cec)
+
+
+
+
+#### 4.2.3 字符串输入
+
+* cin使用空白来确定字符串的结束位置，因此cin在获取字符数组输入时只读取一个单词。
+
+* 例程：
+
+  * ``` c++
+    // instr1.cpp -- reading more than one string
+    #include <iostream>
+    
+    int main() {
+    	using namespace std;
+    
+    	const int ArSize = 20;
+    	char name[ArSize];
+    	char dessert[ArSize];
+    
+    	cout << "Enter your name:\n";
+    	cin >> name;
+    	cout << "Enter your favorite dessert:\n";
+    	cin >> dessert;
+    	cout << "I have some delicious " << dessert;
+    	cout << " for you, " << name << ".\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Enter your name:
+    Alistair Dreeb
+    Enter your favorite dessert:
+    I have some delicious Dreeb for you, Alistair.
+    ```
+
+* 解决办法：下届内容：采用面向行而不是面向单词的方法：
+
+
+
+#### 4.2.4 每次读取一行字符串输入
+
+* getline()：读取一行输入，丢弃换行符；
+
+* get()：读取一行输入，将换行符保留在输入序列中。
+
+* 1、getline()：
+
+  * 调用方法：
+
+    * cin.getline(name, 20);
+    * 该函数有两个参数：
+      * 第一个参数是用来存储输入行的数组的名称；
+      * 第二个参数是要读取的字符数。如果这个参数为20，则函数最多读取19个字符，余下的空间用于存储自动在结尾处添加的`空字符`。
+      * getline( )成员函数在读取指定数目的字符或遇到换行符时停止读取。
+
+  * 例程：
+
+    * ``` c++
+      // instr2.cpp -- reading more than one word with getline
+      #include <iostream>
+      
+      int main() {
+      	using namespace std;
+      
+      	const int ArSize = 20;
+      	char name[ArSize];
+      	char dessert[ArSize];
+      
+      	cout << "Enter your name:\n";
+      	cin.getline(name, ArSize);
+      	cout << "Enter your favorite dessert:\n";
+      	cin.getline(dessert, ArSize);
+      	cout << "I have some delicious " << dessert;
+      	cout << " for you, " << name << ".\n";
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ``` c++
+      Enter your name:
+      Dirk Hammernose
+      Enter your favorite dessert:
+      Radish Torte
+      I have some delicious Radish Torte for you, Dirk Hammernose.
+      ```
+
+* 2、get()：
+
+  * 由于第一次调用后，换行符将留在输入队列中，因此第二次调用时看到的第一个字符便是换行符。
+
+  * 因此get()认为已到达行尾，而没有发现任何可读取的内容。如果不借助于帮助，get()将不能跨过该换行符：
+
+    * ``` c++ 
+      cin.get(name, ArSize);
+      cin.get(dessert, ArSize); //problem
+      ```
+
+  * 解决办法：
+
+    * 1、使用不带任何参数的cin.get()调用：
+
+      * ``` c++
+        cin.get(name, ArSize);
+        cin.get();
+        cin.get(dessert, ArSize); 
+        ```
+
+    * 2、使用get()方式将两个类成员函数拼接：
+
+      * ```c++
+        cin.get(name, ArSize).get();
+        cin.getline(name1, ArSize).getline(name2, ArSize);
+        ```
+
+  * 例程：
+
+    * ``` c++
+      // instr3.cpp -- reading more than one word with get() & get()
+      #include <iostream>
+      
+      int main() {
+      	using namespace std;
+      
+      	const int ArSize = 20;
+      	char name[ArSize];
+      	char dessert[ArSize];
+      
+      	cout << "Enter your name:\n";
+      	cin.get(name, ArSize).get();
+      	cout << "Enter your favorite dessert:\n";
+      	cin.get(dessert, ArSize).get();
+      	cout << "I have some delicious " << dessert;
+      	cout << " for you, " << name << ".\n";
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ``` c++\
+      Enter your name:
+      Mai Parfait
+      Enter your favorite dessert:
+      Chocolate Mousse
+      I have some delicious Chocolate Mousse for you, Mai Parfait.
+      ```
+
+  * 结论：getline()使用起来简单一些，但get()使得检查错误更简单些。
+
+* 3、空行和其他问题：
+  * 当get()读取空行后将设置失效位。即接下来的输入将被阻断，但可以用下面的命令来恢复输入：
+    * cin.clear();
+  * 输入字符串可能比分配的空间长：
+    * getline()和get()将把余下的字符留在输入队列中；
+    * 而getline()还会设置实效位，并关闭后面的输入。
+
+
+
+#### 4.2.5 混合输入字符串和数字
+
+* 例程：
+
+  * ``` c++
+    // numstr.cpp -- following number input with line input
+    #include <iostream>
+    
+    int main() {
+    	using namespace std;
+    	cout << "What year was your house built?\n";
+    	int year;
+    	cin >> year;
+    	cin.get();
+    	cout << "What is its street address?\n";
+    	char address[80];
+    	cin.getline(address, 80);
+    	cout << "Year built: " << year << endl;
+    	cout << "Address: " << address << endl;
+    	cout << "Done!\n";
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    What year was your house built?
+    2000
+    What is its street address?
+    Beihang University
+    Year built: 2000
+    Address: Beihang University
+    Done!
+    ```
+
+  * 如果不加cin.get()；代码就会把输入完数字后的回车转换为换行符留在输入队列中，当cin.getline()进行时，会认为换行符是空行，将空字符传给目标数组。
+
+
+
+### 4.3 string类简介
+
+* 可以用string类型的变量来储存字符串，而不是字符数组。
+* string类更方便，同时提供了将字符串作为一种数据类型的表示方法。
