--- a/notes/ch04 复合类型.md
+++ b/notes/ch04 复合类型.md
@@ -441,4 +441,62 @@
 ### 4.3 string类简介
 
 * 可以用string类型的变量来储存字符串，而不是字符数组。
+
+* string类更方便，同时提供了将字符串作为一种数据类型的表示方法。
+
+* 例程：
+
+  * ``` c++
+    // strtype1.cpp -- using the C++ string class
+    #include <iostream>
+    #include <string>
+    
+    int main() {
+    	using namespace std;
+    	char charr1[20];
+    	char charr2[20] = "jaguar";
+    	string str1;
+    	string str2 = "panther";
+    
+    	cout << "Enter a kind of feline: ";
+    	cin >> charr1;
+    	cout << "Enter another kind of feline: ";
+    	cin >> str1;
+    	
+    	cout << "Here are some kind of felines:\n";
+    	cout << charr1 << " " << charr2 << " "
+    		 << str1 << " " << str2 << endl;
+    	cout << "The third letter in " << charr2 << " is "
+    		 << charr2[2] << endl;
+    	cout << "The third letter in " << str2 << " is "
+    		<< str2[2] << endl;
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Enter a kind of feline: ocelot
+    Enter another kind of feline: tiger
+    Here are some kind of felines:
+    ocelot jaguar tiger panther
+    The third letter in jaguar is g
+    The third letter in panther is n
+    ```
+
+  * 使用string对象的方式与使用字符数组基本相同；
+
+  * 主要却别在于：
+
+    * 可以将sting对象声明为简单变量，而不是数组：
+      * string str1;
+      * string str2 =  "panther";
+    * 类设计能够让程序自动处理string的大小，使得与使用数组相比，更方便也更安全。
+
+
+
+### 4.3 string类简介
+
+* 可以用string类型的变量来储存字符串，而不是字符数组。
 * string类更方便，同时提供了将字符串作为一种数据类型的表示方法。
