--- a/notes/ch04 复合类型.md
+++ b/notes/ch04 复合类型.md
@@ -499,4 +499,294 @@
 ### 4.3 string类简介
 
 * 可以用string类型的变量来储存字符串，而不是字符数组。
+
 * string类更方便，同时提供了将字符串作为一种数据类型的表示方法。
+
+* 例程：
+
+  * ``` c++
+    // strtype1.cpp -- using the C++ string class
+    #include <iostream>
+    #include <string>
+    
+    int main() {
+    	using namespace std;
+    	char charr1[20];
+    	char charr2[20] = "jaguar";
+    	string str1;
+    	string str2 = "panther";
+    
+    	cout << "Enter a kind of feline: ";
+    	cin >> charr1;
+    	cout << "Enter another kind of feline: ";
+    	cin >> str1;
+    	
+    	cout << "Here are some kind of felines:\n";
+    	cout << charr1 << " " << charr2 << " "
+    		 << str1 << " " << str2 << endl;
+    	cout << "The third letter in " << charr2 << " is "
+    		 << charr2[2] << endl;
+    	cout << "The third letter in " << str2 << " is "
+    		<< str2[2] << endl;
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Enter a kind of feline: ocelot
+    Enter another kind of feline: tiger
+    Here are some kind of felines:
+    ocelot jaguar tiger panther
+    The third letter in jaguar is g
+    The third letter in panther is n
+    ```
+
+  * 使用string对象的方式与使用字符数组基本相同；
+
+  * 主要却别在于：
+
+    * 可以将sting对象声明为简单变量，而不是数组：
+      * string str1;
+      * string str2 =  "panther";
+    * 类设计能够让程序自动处理string的大小，使得与使用数组相比，更方便也更安全。
+
+
+
+#### 4.3.1 C++11 字符串初始化
+
+``` c++
+char first_data[] = {"Le Chapon Dodu"};
+char second_data[] {"Le Chapon Dodu"};
+char third_data = {"Le Chapon Dodu"};
+char fourth_data {"Le Chapon Dodu"};
+```
+
+
+
+#### 4.3.2 赋值、拼接和附加
+
+* 1、赋值：
+
+  * 可以将一个string对象赋给另一个string对象，但数组不能赋给另一个数组：
+
+  * ```C++
+    char charr1[20];
+    char cahrr2[20] = "jaguar";
+    string str1;
+    string str2 = "panther";
+    charr1 = charr2;//x INVALID
+    str1 = str2;//VALID
+    ```
+
+* 2、拼接和附加：
+
+  * 可以使用运算符+将两个string对象合并
+
+  * 也可以用+=将字符串附加到string对象的末尾
+
+  * ``` c++
+    string str3;
+    str3 = str1 + str2;
+    str1 += str2;
+    ```
+
+* 例程：
+
+  * ``` c++
+    // strtype2.cpp -- assigning, adding, and appending
+    #include <iostream>
+    #include <string>
+    int main() {
+    	using namespace std;
+    	string s1 = "penguin";
+    	string s2, s3;
+    
+    	cout << "You can assign one string object to another: s2 = s1\n";
+    	s2 = s1;
+    	cout << "s1: " << s1 << ", s2: " << s2 << endl;
+    	cout << "You can assign a C-style sring to a string object.\n";
+    	cout << "s2 = \"buzzard\"\n";
+    	s2 = "buzzard";
+    	cout << "s2: " << s2 << endl;
+    	cout << "You can concatenate strings: s3 = s1 + s2\n";
+    	s3 = s1 + s2;
+    	cout << "s3: " << s3 << endl;
+    	cout << "You can cappend strings.\n";
+    	s1 += s2;
+    	cout << "s1 += s2 yields s1 = " << s1 << endl;
+    	s2 += " for a day";
+    	cout << "s2 += \" for a day\" yields s2 = " << s2 << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    You can assign one string object to another: s2 = s1
+    s1: penguin, s2: penguin
+    You can assign a C-style sring to a string object.
+    s2 = "buzzard"
+    s2: buzzard
+    You can concatenate strings: s3 = s1 + s2
+    s3: penguinbuzzard
+    You can cappend strings.
+    s1 += s2 yields s1 = penguinbuzzard
+    s2 += " for a day" yields s2 = buzzard for a day
+    ```
+
+
+
+#### 4.3.3 string 类的其他类型
+
+* 头文件cstring提供了给字符串赋值等工作的函数：
+
+  * strcpy()将字符串赋值到字符数组中；
+  * strcat()将字符串附加到字符数组末尾；
+
+* 例程：
+
+  * ``` c++
+    // strtype3.cpp -- more string class features
+    #define _CRT_SECURE_NO_WARNINGS
+    #include <iostream>
+    #include <string>
+    #include <cstring>
+    int main() {
+    	using namespace std;
+    	char charr1[20];
+    	char charr2[20] = "jaguar";
+    	string str1;
+    	string str2 = "panther";
+    
+    	str1 = str2;
+    	strcpy(charr1, charr2);
+    
+    	str1 += " paste";
+    	strcat(charr1, " juice");
+    
+    	int len1 = str1.size();
+    	int len2 = strlen(charr1);
+    
+    	cout << "The string " << str1 << " contains "
+    		 << len1 << " characters.\n";
+    	cout << "The string " << charr1 << " contains "
+    		<< len2 << " characters.\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    The string panther paste contains 13 characters.
+    The string jaguar juice contains 12 characters.
+    ```
+
+  * 使用字符数组时，总是存在目标数目过小，无法储存指定信息的危险：
+
+    * strcat()视图将全部字符复制到目标数组中，浙江覆盖相邻的内存，可能导致程序终止。
+    * 而string类具有自动调整大小的功能。
+
+  * 确定字符串中字符数的方法：
+
+    * ``` c++
+      int len1 = str1.size();
+      int len2 = strlen(charr1);
+      ```
+
+    * 而C++ string 类对象使用对象名和句点运算符来指出要使用哪个字符串。
+
+
+
+#### 4.3.4 stringl 类 I/O
+
+* 例程：
+
+  * ``` c++
+    // strtype4.cpp -- line input
+    #include <iostream>
+    #include <string>
+    #include <cstring>
+    
+    int main() {
+    	using namespace std;
+    	char charr[20];
+    	string str;
+    
+    	cout << "Length of string in charr before input: "
+    		 << strlen(charr) << endl;
+    	cout << "Length of string in str before input: "
+    	   	 << str.size() << endl;
+    	cout << "Enter a line of text:\n";
+    	cin.getline(charr, 20);
+    	cout << "You entered: " << charr << endl;
+    	cout << "Enter another line of text:\n";
+    	getline(cin, str);
+    	cout << "You entered: " << str << endl;
+    	cout << "Length of string in charr after input: "
+    	 	 << strlen(charr) << endl;
+    	cout << "Length of string in str after input: "
+    		 << str.size() << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Length of string in charr before input: 31
+    Length of string in str before input: 0
+    Enter a line of text:
+    peanut butter
+    You entered: peanut butter
+    Enter another line of text:
+    blueberry jam
+    You entered: blueberry jam
+    Length of string in charr after input: 13
+    Length of string in str after input: 13
+    ```
+
+  * strlen()函数对于未被初始化的数据，第一个空字符出现的位置是随机的，因此得到的数组长度很可能与申明不同。
+
+  * str.size()能够读取未被初始化的string对象长度，该长度自动这是为0；
+
+  * cin.getline(charr, 20)：
+
+    * getline是istream类的一个类方法；
+    * cin是istream对象
+    * （  ，）中第一个是目标数组，第二个是参数长度
+
+  * getline(cin, str)：
+
+    * 这里getline()不是类方法
+    * 它将cin作为参数，指出到哪里去查找输入
+
+
+
+#### 4.3.5 其他形式的字符串字面值
+
+|   类型   | 前缀 |                  备注                   |
+| :------: | :--: | :-------------------------------------: |
+| wchar_t  |  L   | wchar_t title[] = L"Chief Astrogator";  |
+| char16_t |  u   | char16_t name [] = u"Felonia Ripova" ;  |
+| char32_t |  U   | char32_t car [] =U"Humber Super Snipe"; |
+|   raw    |  R   |     cout << R"(xxx "xx" "\n"xxx)";      |
+
+* 院士字符串语法语法允许再表示字符串开头的`"`和`(`之间添加其他字符
+
+  * 使用R"+* (标识原始字符串的开头时，必须使用)+*标识原始字符串的
+
+  * ```
+    cout << R"+*("(Who wouldn't?)", she whispered.)+*" << endl;
+    //out:"(Who wouldn't?)", she whispered.
+    ```
+
+
+
+### 4.4 结构简介
