--- a/notes/ch04 复合类型.md
+++ b/notes/ch04 复合类型.md
@@ -790,3 +790,623 @@ char fourth_data {"Le Chapon Dodu"};
 
 
 ### 4.4 结构简介
+
+* 结构是一种比数组更灵活的数据格式，因为同一个结构可以储存多种类型的数据，这使得能够将有关篮球运动员的信息放在一个结构中，从而将数据的表示合并到一起。
+
+* 结构的创建（2步）：
+
+  * 1、定义结构描述：描述并标记了能够储存在结构中的各种数据类型；
+
+    * ``` c++
+      struct inflatable
+      {
+          char name[20];
+          float volume;
+          double price;
+      };
+      ```
+
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/d00c2ef2-ab79-4bff-8b76-c48aede396d6)
+
+
+  * 2、按描述创建结构变量:
+
+    * ``` c++
+      inflatable hat;
+      inflatable woopie_cushion;
+      inflatable mainframe;
+      ```
+
+    * C++中创建结构变量可以省略struct。
+
+    * 之后便可以使用hat.volume进行访问各个成员，hat是一个结构，而hat.volume是一个char变量。
+
+
+
+#### 4.4.1 在程序中使用结构
+
+* 例程：
+
+  * ``` c++
+    // structur.cpp -- a simple structure
+    #include <iostream>
+    struct inflatable {
+    	char name[20];
+    	float volume;
+    	double price;
+    };
+    
+    int main() {
+    	using namespace std;
+    
+    	inflatable guest = {
+    		"Glorious Gloria",
+    		1.88,
+    		29.99
+    	};
+    
+    	inflatable pal = {
+    		"Audacious Arthur",
+    		3.12,
+    		32.99
+    	};
+    
+    	cout << "Expand your gest list with " << guest.name;
+    	cout << " and " << pal.name << "!\n";
+    	cout << "You can have both for $";
+    	cout << guest.price + pal.price << "!\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Expand your gest list with Glorious Gloria and Audacious Arthur!
+    You can have both for $62.98!
+    ```
+
+  * 结构声明这里采用外部声明，声明有两种方式，通常采用外部声明。
+
+  * 变量也可以在函数内部和外部定义，这里提倡使用外部结构声明，内部变量定义。
+
+
+
+#### 4.4.2 C++ 结构初始化
+
+* 与数组一样，C++也支持将列表初始化用于结构，且等号是可选的：
+
+  * ``` c++
+    inflatable duck {"Daphne", 0.12, 9
+                    98};
+    ```
+
+* 其次，如果大括号内未包含任何东西，各个成员都将被设置为零：
+
+  * ```c++
+    inflatable mayor {};
+    ```
+
+* 最后，不允许缩窄转换。
+
+
+
+#### 4.4.3 结构可以将string类作为成员
+
+* 只要您使用的编译器支持对以string对象作为成员的结构进行初始化，就可以。
+
+* ``` c++
+  #include <string>
+  struct inflatable{
+    std::string name;
+    float volume;
+    double price;
+  };
+  ```
+
+
+
+#### 4.4.4 其他结构属性
+
+* 1、可以将结构作为参数传递给函数，也可以让函数返回一个结构；
+
+* 2、还可以使用赋值运算符（=）将结构赋给另一种类型的结构。
+
+* 例程：
+
+  * ```c++
+    // assign_st -- assigning structures
+    #include <iostream>
+    struct inflatable{
+    	char name[20];
+    	float volume;
+    	double price;
+    };
+    
+    int main() {
+    	using namespace std;
+    	inflatable bouquet = {
+    		"sunflowers",
+    		0.20,
+    		12.49
+    	};
+    
+    	inflatable choice;
+    	cout << "bouquet: " << bouquet.name << " for $";
+    	cout << bouquet.price << endl;
+    
+    	choice = bouquet;
+    	cout << "choice: " << choice.name << " for $";
+    	cout << choice.price << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    bouquet: sunflowers for $12.49
+    choice: sunflowersfor $12.49
+    ```
+
+  * 可以同时完成定义结构和创建结构变量的工作：
+
+    * ``` c++
+      struct perks
+      {
+          int key_number;
+          char car[12];
+      } mr_smith, ms_jones;
+      
+      //甚至可以初始化：
+      struct perks
+      {
+          int key_number;
+          char car[12];
+      } mr_glitz = 
+      {
+          7,
+          "Packard"
+      };
+      ```
+
+
+
+#### 4.4.5 结构数组
+
+* 可以创建元素为结构的数组：
+
+  * ``` c++
+    inflatable gifs[100];
+    ```
+
+  * 这样就就可以理解为创建了一批人，他们手上对应不同的物品
+
+  * 即：gifts是一个inflatable数组，其中每个元素gifts[0]、gifts[1]都是inflatable对象，可以这样用：
+
+    * gifts[0].volume;
+    * gifts[99].price;
+
+* 结构数组初始化：
+
+  * ``` c++
+    inflatable guests[2] = {
+        {"Bambi", 0.5, 21.99},
+        {"Godzilla", 2000, 565.99}
+    };
+    ```
+
+* 例程：
+
+  * ```c++
+    // arrstruc.cpp -- an arry of structures
+    #include <iostream>
+    struct inflatable {
+    	char name[20];
+    	float volume;
+    	double price;
+    };
+    
+    int main() {
+    	using namespace std;
+    	inflatable guests[2] = {
+    		{"Bambi", 0.5, 21.99},
+    		{"Godzilla", 2000, 565.99}
+    	};
+    
+    	cout << "The guests " << guests[0].name << " and " << guests[1].name
+    		<< "\nhave a combined volume of "
+    		<< guests[0].volume + guests[1].volume << " cubic feet.\n";
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    The guests Bambi and Godzilla
+    have a combined volume of 2000.5 cubic feet.
+    ```
+
+
+
+#### 4.4.6 结构中的位字段
+
+* C++也允许指定占用特定位数的结构成员：
+
+* 字段的类型应为整型或枚举，接下来是冒号，冒号后面是一个数字，指定了使用的位数。
+
+* 例程：
+
+  * ``` c++
+    struct torgle_register{
+        unsigned int SN : 4;
+        unsigned int : 4;
+        bool goodIn : 1;
+        bool goodTorgle : 1;
+    }
+    ```
+
+
+
+### 4.5 共用体
+
+* 共用体和结构体有相似之处，能够储存不同的数据类型，但是`只能同时储存其中的一种类型`。
+* 由于共用体每次只能储存一个值，因此共用体的长度为其最大成员的长度。
+* 用途之一：当数据项使用两种或更多种格式（但不会同时使用时），可以节省空间：
+  * 例如管理一个小商品目录，其中有一些商品的ID为整数，而另一些ID为字符串。见P95，共用体用在了结构的成员当中，因此就说明了共用体是一种数据格式。
+  * 共用体常用于(但并非只能用于）节省内存。当前，系统的内存多达数GB甚至数TB，好像没有必要节省内存，但并非所有的C++程序都是为这样的系统编写的。C++还用于嵌入式系统编程，如控制烤箱、MP3播放器或火星漫步者的处理器。对这些应用程序来说，内存可能非常宝贵。另外，共用体常用于操作系统数据结构或硬件数据结构。
+
+
+
+### 4.6 枚举
+
+* enum工具提供了另一种创建符号常量的方式，这种方式可以代替const。它还可以定义新类型，但必须按严格的限制进行：
+
+  * ``` c++
+    enum spectrum {red, orange, yellow, green, blue, violet, indigo, ultraviolet};
+    ```
+
+  * 让 spectrum成为新类型的名称；spectrum被称为枚举(enumeration)，就像struct变量被称为结构一样。
+
+  * 将red、 orange、yellow等作为符号常量,它们对应整数值0~7。这些常量叫作枚举量( enumerator)。
+
+  * 可以用枚举名来声明这种类型的变量：
+
+    * ``` c++ 
+      spectrum band;
+      ```
+
+
+
+#### 4.6.1 设置枚举量的值
+
+* 可以使用赋值运算符来显式地设置枚举量的值：
+
+  * ```c++
+    enum bits{one = 1, two = 2, four = 4, eight = 8};
+    ```
+
+* 指定的值必须为整数。也可以只显式地定义其中一些枚举量的值：
+
+  * ``` c++
+    enum bigstep{first, second = 100, third};
+    ```
+
+  * 这里，first在默认情况下为0。后面没有被初始化的枚举量的值将比其前面的枚举量大1。即third=101。
+
+* 可以创建多个值相同的枚举量：
+
+  * ```c++
+    enum {zero, null = 0, one, numero_uno = 1};
+    ```
+
+
+
+#### 4.6.2 枚举的取值范围
+
+* 见P97
+
+
+
+### 4.7 指针和自由存储空间
+
+* 指针是一个变量，其储存的式值得地址，而不是值得本身。
+
+* 对变量应用地址运算符即可找到常规变量得地址：
+
+  * 例程：
+
+    * ``` c++
+      // address.cpp -- using the & operator to find addresses
+      #include <iostream>
+      
+      int main() {
+      	using namespace std;
+      	int donuts = 6;
+      	double cups = 4.5;
+      
+      	cout << "donuts value = " << donuts;
+      	cout << " and donuts address = " << &donuts << endl;
+      	cout << "cups value = " << cups;
+      	cout << " and cups address = " << &cups << endl;
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ``` c++
+      donuts value = 6 and donuts address = 00EFF6F4
+      cups value = 4.5 and cups address = 00EFF6E4
+      ```
+
+* 指针名表示的是地址。*运算符可以得到该地址存储的值：
+
+  * 例程：
+
+    * ```c++
+      // pointer.cpp -- our first pointer variable
+      #include <iostream>
+      int main() {
+      	using namespace std;
+      	int updates = 6;
+      	int * p_updates;
+      	p_updates = &updates;
+      
+      	cout << "Values: updates = " << updates;
+      	cout << ", *p_updates = " << *p_updates << endl;
+      
+      	cout << "Addresses: &updates = " << &updates;
+      	cout << ", p_updates = " << p_updates << endl;
+      
+      	*p_updates = *p_updates + 1;
+      	cout << "Now updates = " << updates << endl;
+      
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ```c++
+      Values: updates = 6, *p_updates = 6
+      Addresses: &updates = 00C4F884, p_updates = 00C4F884
+      Now updates = 7
+      ```
+
+    * ![image](https://github.com/CoderSuHang/Cpp-Primer-Plus-Notes/assets/104765251/5b4687f0-f0ae-476a-9e97-bcfd28e291b2)
+
+
+
+
+#### 4.7.1 声明和初始化指针
+
+* 指针声明必须指定指针指向的数据类型：
+  * int * p_updates;
+  * p_updates的类型是指向int的指针
+
+* 对于每个指针变量名，都需要使用一个*：
+
+  * int* p1, p2;
+  * 该声明创建了一个指针（p1）和一个int变量（p2）
+
+* 例程：
+
+  * ``` c++
+    //int_ptr.cpp -- initialize a pointer
+    #include <iostream>
+    int main() {
+    	using namespace std;
+    	int higgens = 5;
+    	int* pt = &higgens;
+    
+    	cout << "Value of higgens = " << higgens
+    		 << "; Address of higgens = " << &higgens << endl;
+    	cout << "Value of *pt = " << *pt
+    		 << "; Address of pt = " << pt << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ``` c++
+    Value of higgens = 5; Address of higgens = 008FF954
+    Value of *pt = 5; Address of pt = 008FF954
+    ```
+
+  * 程序将pi（而不是*pi）初始化为higgens的地址：
+
+    * ``` c++
+      int* pt = &higgens;
+      ```
+
+    * 等价于：
+
+    * ``` c++
+      	int * pt;
+      	pt = &higgens;
+      ```
+
+
+
+#### 4.7.2 指针的危险
+
+* 在C++中创建指针时，计算机将分配用来存储地址的内存，但不会分配用来存储指针所指向数据内存。
+
+
+
+#### 4.7.3 指针和数字
+
+* 指针不是数字，不能简单地将整数赋值给指针，需要强制转换：
+
+* ``` c++
+  int* pt;
+  pt - (int *) 0xB8000000;
+  ```
+
+
+
+#### 4.7.4 使用new来分配内存
+
+* ```c++
+  int* pn = new int;
+  ```
+
+  * new int 告诉程序，需要适合存储int的内存，new运算符根据类型来确定需要多少字节的内存。
+  * 然后找到这样的内存，并返回该内存块的地址。
+
+* 为一个数据对象（可以是结构，也可以是基本类型）获得并指定分配内存的通用格式如下:
+
+  * ```c++
+    typeName* pointer_name = new typeName;
+    ```
+
+* 例程：
+
+  * ```c++
+    // use_new.cpp -- using the new operator
+    #include <iostream>
+    
+    int main() {
+    	using namespace std;
+    	int nights = 1001;
+    	int* pt = new int;
+    	*pt = 1001;
+    	
+    	cout << "nights value = ";
+    	cout << nights << ": location " << &nights << endl;
+    	cout << "int ";
+    	cout << "value = " << *pt << ": location = " << pt << endl;
+    	double* pd = new double;
+    	*pd = 10000001.0;
+    
+    	cout << "double ";
+    	cout << "value = " << *pd << ": location = " << pd << endl;
+    	cout << "location of pointer pd: " << &pd << endl;
+    	cout << "size of pt = " << sizeof(pt);
+    	cout << ": size of *pt = " << sizeof(*pt) << endl;
+    	cout << "size of pd = " << sizeof(pd);
+    	cout << ": size of *pd = " << sizeof(*pd) << endl;
+    
+    	return 0;
+    }
+    ```
+
+* 结果：
+
+  * ```c++
+    nights value = 1001: location 00B9FC44
+    int value = 1001: location = 01220B98
+    double value = 1e+07: location = 01221B80
+    location of pointer pd: 00B9FC2C
+    size of pt = 4: size of *pt = 4
+    size of pd = 4: size of *pd = 8
+    ```
+
+
+
+#### 4.7.5 使用delete释放内存
+
+* 当需要内存时，可以使用new来请求；
+
+* 当使用完内存后，需要将其归还给内存池时，可以使用delete运算符。
+
+  * ``` c++
+    int* ps = new int;
+    ...
+    delete ps;
+    ```
+
+  * 这将释放ps指向的内存，但不会删除指针ps 本身。例如，可以将ps重新指向另一个新分配的内存块。
+
+* `注意`：详情见P104
+
+  * 一定要配对地使用new和delete；
+  * 不要尝试释放已经释放地内存块；
+  * 不能使用delete来释放声明变量所获得的内存。
+
+
+
+#### 4.7.6 使用new来创建动态数组
+
+* 应用于大型数据，使用new时，如果在运行阶段需要数组，则创建它。
+
+* 1、使用new 创建动态数组：
+
+  * 只要将数组的元素类型和元素数目告诉new即可：
+
+    * ``` C++
+      int* psome = new int [10];
+      ```
+
+    * new运算符返回第一个元素的地址。
+
+  * 当使用完new分配的内存块时，应使用delete释放他们，对`对应`的释放方式为：
+
+    * ``` c++
+      delete [] psome;
+      ```
+
+  * 总结，使用new和delete时，应遵守如下规则：
+
+    * 不要使用delete来释放不是new分配的内存。
+    * 不要使用delete释放同一个内存块两次。
+    * 如果使用new []为数组分配内存，则应使用delete []来释放。
+    * 如果使用new []为一个实体分配内存，则应使用delete（没有方括号）来释放。
+    * 对空指针应用delete是安全的。
+
+  * 不能使用sizeof运算符来确定动态分配的数组包含的字节数。
+
+  * 为数组分配内存的通用格式：
+
+    * ``` c++
+      type_name * pointer_name = new type_name [num_elements]
+      ```
+
+* 2、使用动态数组
+
+  * ```c++
+    int* psome = new int [10];
+    ```
+
+  * 只要把指针当作数组名使用即可：
+
+    * 第一个元素psome[0]，第二个元素psome[1]
+
+  * 例程：
+
+    * ``` c++
+      // arraynew.cpp -- using the new operator for arrays
+      #include <iostream>
+      int main() {
+      	using namespace std;
+      	double* p3 = new double[3];
+      	p3[0] = 0.2;
+      	p3[1] = 0.5;
+      	p3[2] = 0.8;
+      	cout << "p3[1] is " << p3[1] << ".\n";
+      	p3 = p3 + 1;
+      	cout << "Now p3[0] is " << p3[0] << " and ";
+      	cout << "p3[1] is " << p3[1] << ".\n";
+      	p3 = p3 - 1;
+      	delete [] p3;
+      	
+      	return 0;
+      }
+      ```
+
+  * 结果：
+
+    * ``` c++
+      p3[1] is 0.5.
+      Now p3[0] is 0.5 and p3[1] is 0.8.
+      ```
+
+  * 相邻的 int 地址通常相差2个字节或4个字节，而将p3加1后，它将指向下一个元素的地址，这表明指针算术有一些特别的地方。详情见P106
